<resources>
    <string name="app_name">HighStrangeness</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_map">Map</string>
    <string name="title_media_capture">Camera</string>
    <string name="title_list">List</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_account">Account</string>
    <string name="menu_search">Search</string>
    <string name="button_edit_account">Edit Account</string>
    <string name="button_favorites">Favorites</string>
    <string name="button_posts">Posts</string>
    <string name="content_description_user_image">user image</string>
    <string name="button_log_out">Log Out</string>
    <string name="add_profile_picture">Add Profile Picture</string>
    <string name="skip">Skip</string>
    <string name="take_photo">Take Photo</string>
    <string name="from_file">From File</string>
    <string name="edit">Edit</string>
    <string name="login">Log In</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="save_changes">Save Changes</string>
    <string name="faux_password">00000000</string>
    <string name="username">Username</string>
    <string name="details">Details</string>
    <string name="location">Location (Required)</string>
    <string name="description">Description (Required)</string>
    <string name="title">Title (Required)</string>
    <string name="date">Date (Required)</string>
    <string name="pick_date">Pick Date</string>
    <string name="pick_location">Pick Location</string>
    <string name="next">Next</string>
    <string name="tags_optional">Tags (Optional)</string>
    <string name="tag_hint">(Tags should be separated by commas)</string>
    <string name="image_s">Image(s) (Optional)</string>
    <string name="add_image">Add Image</string>
    <string name="video_s_optional">Video(s) (Optional)</string>
    <string name="add_video">Add Video</string>
    <string name="no_results">No Results</string>
    <string name="add_post">Add Post</string>
    <string name="ex_ghost_supernatural_spirit">Ex: Ghost,Supernatural,Spirit</string>
    <string name="add_audio">Add Audio</string>
    <string name="mm_dd_yyyy">(MM/dd/yyyy)</string>
    <string name="address">Address</string>
    <string name="report">Report</string>
    <string name="images">Images</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="audios">Audios</string>
    <string name="first_hand_experience">First-hand Experience</string>
    <string name="videos">Videos</string>
    <string name="new_posts">New Posts</string>
    <string name="post_image">post image</string>\
    <string name="delete">Delete</string>
    <string name="flag">Flag</string>
    <string name="bookmark">Bookmark</string>
    <string name="edit_text">Edit Text</string>
    <string name="edit_post">Edit Post</string>
    <string name="filter_by_tag">Filter by Tag</string>
    <string name="filter_by_time_range">Filter by Time Range</string>
    <string name="filter_by_evidence">Filter by Evidence</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="image">Image</string>
    <string name="menu_clear">Clear</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
</resources>