<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/menu_search"
        app:showAsAction="ifRoom"
        android:tooltipText="Search Location"
        app:actionViewClass="android.widget.SearchView" />

    <item android:title="@string/menu_filter"
        android:id="@+id/app_bar_filter"
        android:icon="@drawable/ic_baseline_filter_list_24"
        android:iconTint="@color/colorPrimaryDark"
        app:showAsAction="ifRoom"/>

    <item android:title="@string/menu_account"
        android:id="@+id/app_bar_account"
        android:iconTint="@color/colorPrimaryDark"
        android:icon="@drawable/ic_baseline_person_outline_24"
        app:showAsAction="ifRoom"/>
</menu>