<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="36dp"
    tools:context=".ui.account.edit_account.EditAccountActivity">

    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
        android:id="@+id/cardViewProfilePictureEditAccountScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="50dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewProfilePictureEditAccountScreen"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/content_description_user_image"
            android:src="@drawable/user"
            android:scaleType="centerCrop"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonEditProfilePic"
        style="@style/BorderlessButton"
        android:text="@string/edit"

        app:layout_constraintTop_toBottomOf="@id/cardViewProfilePictureEditAccountScreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/editTextEditUsername"
        style="@style/EditTextCustom"
        android:hint="@string/username"

        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonEditProfilePic"
        android:autofillHints="Username"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextEditEmail"
        style="@style/EditTextCustom"
        android:enabled="false"
        android:hint="@string/email"

        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextEditUsername"
        android:autofillHints="@string/email"
        android:inputType="textEmailAddress" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonEditEmail"
        style="@style/BorderlessButton"
        android:text="@string/edit"
        android:elevation="4dp"

        app:layout_constraintBottom_toBottomOf="@id/editTextEditEmail"
        app:layout_constraintEnd_toEndOf="@id/editTextEditEmail"/>

    <EditText
        android:id="@+id/editTextPassword"
        style="@style/EditTextCustom"
        android:inputType="textPassword"
        android:text="@string/faux_password"
        android:enabled="false"
        android:hint="@string/password"

        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextEditEmail"
        android:autofillHints="@string/password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonEditPassword"
        style="@style/BorderlessButton"
        android:text="@string/edit"
        android:elevation="4dp"

        app:layout_constraintBottom_toBottomOf="@id/editTextPassword"
        app:layout_constraintEnd_toEndOf="@id/editTextPassword"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSaveChanges"
        style="@style/ButtonStandard"
        android:background="@drawable/button_shape_standard"
        android:text="@string/save_changes"
        android:visibility="gone"

        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>