<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/progress_horizontal"
        android:background="@color/pink"
        android:elevation="5dp"
        android:layout_width="0dp"
        android:layout_height="8dp"

        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.post.PostPt1Fragment">

            <TextView
                android:id="@+id/textViewDetails"
                style="@style/TextViewTitleEncounter"
                android:layout_margin="32dp"
                android:textColor="@color/colorPrimaryDark"

                android:text="@string/details"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextTitleLayout"
                style="@style/EditTextAddPost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewDetails">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/title" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textViewFirstHandExperience"
                style="@style/TextViewTitleEncounter"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/colorPrimaryDark"

                android:text="@string/first_hand_experience"
                android:textSize="13sp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextTitleLayout" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_first_hand_experience"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                app:layout_constraintTop_toTopOf="@id/textViewFirstHandExperience"
                app:layout_constraintEnd_toEndOf="parent"/>


            <TextView
                android:id="@+id/textViewDateLabel"
                style="@style/TextViewTitleEncounter"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/colorPrimaryDark"

                android:text="@string/date"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/switch_first_hand_experience"/>

            <TextView
                android:id="@+id/textViewDateFormat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/gray"
                style="@style/TextViewTitleEncounter.Light"

                android:text="@string/mm_dd_yyyy"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewDateLabel" />

            <Button
                android:id="@+id/buttonPickDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                style="@style/ButtonMinor"

                android:text="@string/pick_date"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewDateFormat"/>

            <TextView
                android:id="@+id/textViewLocationTitle"
                style="@style/TextViewTitleEncounter"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/colorPrimaryDark"

                android:text="@string/location"
                android:textSize="13sp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/buttonPickDate" />

            <TextView
                android:id="@+id/textViewLocationAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                style="@style/TextViewTitleEncounter.Light"
                android:textColor="@color/gray"

                android:text="@string/address"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewLocationTitle" />

            <Button
                android:id="@+id/buttonPickLocation"
                style="@style/ButtonMinor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"

                android:layout_marginEnd="32dp"
                android:text="@string/pick_location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewLocationAddress" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextDescriptionLayout"
                style="@style/EditTextAddPost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/buttonPickLocation">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description" />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonNext"
                style="@style/ButtonStandard"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"

                android:background="@drawable/button_shape_standard"
                android:text="@string/next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextDescriptionLayout" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>