<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="24dp"
    tools:context=".ui.account.AccountActivity">

    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
        android:id="@+id/cardViewProfilePicturePostDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="50dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewAddProfilePictureAccountScreen"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/content_description_user_image"
            android:src="@drawable/user"
            android:scaleType="centerCrop"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewUsernameAccountScreen"
        style="@style/TitleBase.Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="50dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toTopOf="@id/cardViewProfilePicturePostDetail"
        app:layout_constraintStart_toEndOf="@id/cardViewProfilePicturePostDetail"/>

    <TextView
        android:id="@+id/textViewEmailAccountScreen"
        style="@style/TextViewTitleEncounter.Light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"

        android:layout_marginStart="24dp"
        app:layout_constraintStart_toEndOf="@id/cardViewProfilePicturePostDetail"
        app:layout_constraintTop_toBottomOf="@id/textViewUsernameAccountScreen"/>

    <Button
        android:id="@+id/buttonEditAccount"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/button_edit_account"
        android:layout_marginTop="48dp"
        style="@style/ButtonMinor"
        app:layout_constraintTop_toBottomOf="@id/textViewEmailAccountScreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/buttonFavorites"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/button_favorites"
        android:layout_marginTop="16dp"
        style="@style/ButtonMinor"
        app:layout_constraintTop_toBottomOf="@id/buttonEditAccount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/buttonMyPosts"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/button_posts"
        android:layout_marginTop="16dp"
        style="@style/ButtonMinor"
        app:layout_constraintTop_toBottomOf="@id/buttonFavorites"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        style="@style/BorderlessButton"
        android:id="@+id/buttonLogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_log_out"
        android:layout_marginBottom="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>