<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.user_auth.add_profile_picture.AddProfilePictureFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textViewHeaderAddPicture"
        style="@style/TitleBase.Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"

        android:fontFamily="@font/heebo_bold"
        android:text="@string/add_profile_picture"
        android:layout_marginBottom="66dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/imageViewProfilePictureAccountScreen"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageViewProfilePictureAccountScreen"
        android:layout_width="100dp"
        android:layout_height="100dp"

        android:src="@drawable/user"
        android:layout_marginBottom="165dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintCircleRadius="4dp"
        android:background="@drawable/view_shape_button_back"
        android:elevation="4dp"
        android:padding="8dp"
        android:layout_width="235dp"
        android:layout_height="115dp"

        android:layout_marginTop="66dp"
        app:layout_constraintTop_toBottomOf="@id/imageViewProfilePictureAccountScreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonAddProfilePicScreen"
            style="@style/BorderlessButton"
            android:text="@string/take_photo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/dividerAddProfilePicScreen"
            app:layout_constraintStart_toStartOf="@id/dividerAddProfilePicScreen"
            />


        <View
            android:id="@+id/dividerAddProfilePicScreen"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonFromFileAddProfilePicScreen"
            style="@style/BorderlessButton"
            android:text="@string/from_file"

            app:layout_constraintTop_toBottomOf="@id/dividerAddProfilePicScreen"
            app:layout_constraintStart_toStartOf="@id/dividerAddProfilePicScreen"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSkipAddProfilePicScreen"
        style="@style/BorderlessButton"
        android:text="@string/skip"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>